tests/errors/expired_break_from_escaped_block.dang
# break from an escaped block fails once the receiving call has returned
let savedBreak(x: Int!): Int! { x }

storeBreak(&block(x: Int!): Int!): Int! {
  savedBreak = block
  0
}

makeBreaker: Int! {
  storeBreak { x =>
    break x
  }
  0
}

pub result = {
  makeBreaker
  savedBreak(1)
}
